Creacion de cabezera para icono y informacion

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div class="hoja_cv">
+        <div class="cabecera">
+            <div class="icono">
+            </div>
+        </div>
     </div>
 </body>
 </html>
