Arreglado el DIV del parrafo de la izquierda
He hecho una cerdada mesopotamica, porque no se como hacer para que lo calcule solo.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <div class="hoja_cv">
-        <div class="cabecera">
-            <div class="icono">
+        <div class="esqueleto">
+            <div class="cabecera">
+                <div class="icono">
+                </div>
+            </div>
+            <div class="parrafo_izquierdo">      
             </div>
         </div>
     </div>
