Poner Imagen de CV y que cuadre bien

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 <body>
     <div class="hoja_cv">
         <div class="esqueleto">
-            <div class="cabecera">
+            <header>
                 <div class="icono">
+                    <img src="vegeta.jpg" alt="Foto CV">
                 </div>
+            </header>
+            <div class="cuerpo">
+
             </div>
-            <div class="parrafo_izquierdo">      
-            </div>
+            <footer class="">
+
+            </footer>
         </div>
     </div>
 </body>
