--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <title>Pagina WEB Curriculum</title>
 </head>
 <body>
     <div class="hoja_cv">
@@ -14,12 +17,11 @@
                 <div class="icono">
                     <img src="vegeta.jpg" alt="Foto CV">
                 </div>
+                <h1 class="nombre_cv">Joan Navio Garcia</h1>
             </header>
             <div class="cuerpo">
-
             </div>
-            <footer class="">
-
+            <footer>
             </footer>
         </div>
     </div>
