Modificacion del Header
Falta terminarlo y poner dentro del dibujo una forma (estrella)

--- a/index.html
+++ b/index.html
@@ -7,18 +7,27 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <title>Pagina WEB Curriculum</title>
 </head>
 <body>
     <div class="hoja_cv">
         <div class="esqueleto">
-            <header>
+            <header class="contenedor1">
+                <div class="icono">
+                    <img src="Imagenes/vegeta.jpg" alt="Foto CV">
+                </div>
+                <div class="div2">
+                    <div class="cuadrado">
+                        <div class="estrella">
+                        </div>
+                    </div>
+                    <div class="triangulo-abajo">
+                    </div>
+                </div>
+                <div class="div3">
+                </div>
             </header>
-            <div class="cuerpo">
-            </div>
-            <footer>
-            </footer>
         </div>
     </div>
 </body>
