Imagen de perfil mas pequeña

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="hoja_cv">
         <div class="esqueleto">
             <header class="contenedor1">
-                <div class="icono">
+                <div class="div1">
                     <img src="Imagenes/vegeta.jpg" alt="Foto CV">
                 </div>
                 <div class="div2">
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div class="div3">
-                    <p class="texto_general">CARRER D'ARMENTERES</p>
+                    <p class="texto_general">CARRER D'ARMENTERES 34<br>SANT FELIU DE LLOBREGAT, 08980<br><br>+34 677 17 66 57<br>JOANNAVIOG2003@GMAIL.COM</p>
                 </div>
             </header>
         </div>
