Ordenado el CSS

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     </div>
                     <div class="triangulo-abajo">
                     </div>
+                    <p class="nombre_cv">JOAN NAVIO GARCIA</p>
                 </div>
                 <div class="div3">
                     <p class="texto_general">CARRER D'ARMENTERES 34<br>SANT FELIU DE LLOBREGAT, 08980<br><br>+34 677 17 66 57<br>JOANNAVIOG2003@GMAIL.COM</p>
