Terminado la cabecera
Falta cambiar el icono

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=star" />
     <title>Pagina WEB Curriculum</title>
 </head>
 <body>
@@ -20,12 +21,10 @@
                 </div>
                 <div class="div2">
                     <div class="cuadrado">
-                        <div class="estrella">
-                        </div>
                     </div>
                     <div class="triangulo-abajo">
                     </div>
-                    <p class="nombre_cv">JOAN NAVIO GARCIA</p>
+                    <p class="texto_general" style="font-size: 40px; margin-top: 40px;">JOAN NAVIO GARCIA</p>
                 </div>
                 <div class="div3">
                     <p class="texto_general">CARRER D'ARMENTERES 34<br>SANT FELIU DE LLOBREGAT, 08980<br><br>+34 677 17 66 57<br>JOANNAVIOG2003@GMAIL.COM</p>
