Creacion del Body con sus dos columnas

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
                     <p class="texto_general">CARRER D'ARMENTERES 34<br>SANT FELIU DE LLOBREGAT, 08980<br><br>+34 677 17 66 57<br>JOANNAVIOG2003@GMAIL.COM</p>
                 </div>
             </header>
+            <div class="cuerpo">
+                <div class="columna1">
+                </div>
+                <div class="columna2">
+                </div>
+            </div>
+            <footer class="contenedor2">
+            
+
+            </footer>
         </div>
     </div>
 </body>
