Creacion de Apartados de Columnas
Falta rellenarlas y meter el contenido

--- a/index.html
+++ b/index.html
@@ -32,14 +32,22 @@
             </header>
             <div class="cuerpo">
                 <div class="columna1">
+                    <article style="width: 100%; height: 60%;border: solid black 1px;">
+
+                    </article>
+                    <article style="width: 100%; height: 40%;border: solid black 1px;">
+
+                    </article>
                 </div>
                 <div class="columna2">
+                    <article style="width: 100%; height: 33%;border: solid black 1px;">
+                    </article>
+                    <article style="width: 100%; height: 33%;border: solid black 1px;">
+                    </article>
+                    <article style="width: 100%; height: 33.8%;border: solid black 1px;">
+                    </article>
                 </div>
             </div>
-            <footer class="contenedor2">
-            
-
-            </footer>
         </div>
     </div>
 </body>
