Descripcion de los articulos dentro del HTML

--- a/index.html
+++ b/index.html
@@ -32,19 +32,27 @@
             </header>
             <div class="cuerpo">
                 <div class="columna1">
-                    <article style="width: 100%; height: 60%;border: solid black 1px;">
-
+                    <article style="width: 100%; height: 60%;" alt="Experiencia Laboral">
+                        <div class="titulo_articulo">
+                        </div>
                     </article>
-                    <article style="width: 100%; height: 40%;border: solid black 1px;">
-
+                    <article style="width: 100%; height: 40%;" alt="Educacion">
+                        <div class="titulo_articulo">
+                        </div>
                     </article>
                 </div>
                 <div class="columna2">
-                    <article style="width: 100%; height: 33%;border: solid black 1px;">
+                    <article style="width: 100%; height: 33%;" alt="Informacion Adicional">
+                        <div class="titulo_articulo">
+                        </div>
                     </article>
-                    <article style="width: 100%; height: 33%;border: solid black 1px;">
+                    <article style="width: 100%; height: 33%;" alt="Perfil">
+                        <div class="titulo_articulo">
+                        </div>
                     </article>
-                    <article style="width: 100%; height: 33.8%;border: solid black 1px;">
+                    <article style="width: 100%; height: 33.8%;" alt="Habilidades">
+                        <div class="titulo_articulo">
+                        </div>
                     </article>
                 </div>
             </div>
