TITULO DE ARTICULO

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 </div>
                 <div class="columna2">
                     <article style="width: 100%; height: 33%;" alt="Informacion Adicional">
-                        <div class="titulo_articulo">
+                        <div class="texto_general">
+                            <p style="text-align: center;align-items: center;font-size: 25px;">☆       INFORMACIÓN ADICIONAL</p>
                         </div>
                     </article>
                     <article style="width: 100%; height: 33%;" alt="Perfil">
