--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
                 <div class="columna2">
                     <article style="width: 100%; height: 33%;" alt="Informacion Adicional">
                         <div class="texto_general">
-                            <p style="text-align: center;align-items: center;font-size: 25px;">☆       INFORMACIÓN ADICIONAL</p>
+                            <p style="text-align: center;align-items: center;font-size: 25px;">☆ INFORMACIÓN ADICIONAL</p>
                         </div>
                     </article>
                     <article style="width: 100%; height: 33%;" alt="Perfil">
-                        <div class="titulo_articulo">
+                        <div class="texto_general">
+                            <p style="text-align: center;align-items: center;font-size: 25px;">☆ PERFIL</p>
                         </div>
                     </article>
                     <article style="width: 100%; height: 33.8%;" alt="Habilidades">
-                        <div class="titulo_articulo">
+                        <div class="texto_general">
                         </div>
                     </article>
                 </div>
