--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     </article>
                     <article style="width: 100%; height: 33.8%;" alt="Habilidades">
                         <div class="texto_general">
+                            <p style="text-align: center;align-items: center;font-size: 25px;">☆ HABILIDADES</p>
                         </div>
                     </article>
                 </div>
