--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <div class="cuerpo">
                 <div class="columna1">
                     <article style="width: 100%; height: 60%;" alt="Experiencia Laboral">
-                        <div class="titulo_articulo">
+                        <div class="texto_general">
+                            <p style="text-align: center;align-items: center;font-size: 25px;">☆ EXPERIENCIA LABORAL</p>
                         </div>
                     </article>
                     <article style="width: 100%; height: 40%;" alt="Educacion">
