--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                         </div>
                     </article>
                     <article style="width: 100%; height: 40%;" alt="Educacion">
-                        <div class="titulo_articulo">
+                        <div class="texto_general">
+                            <p style="text-align: center;align-items: center;font-size: 25px;">☆ EDUCACION</p>
                         </div>
                     </article>
                 </div>
