--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                 <div class="columna1">
                     <article style="width: 100%; height: 60%;" alt="Experiencia Laboral">
                         <div class="texto_general">
-                            <p style="text-align: center;align-items: center;font-size: 25px;">☆ EXPERIENCIA LABORAL</p>
+                            <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
+                                <span style="margin-right: 50px;">☆</span>EXPERIENCIA LABORAL
+                            </p>
                         </div>
                     </article>
                     <article style="width: 100%; height: 40%;" alt="Educacion">
