--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                     </article>
                     <article style="width: 100%; height: 40%;" alt="Educacion">
                         <div class="texto_general">
-                            <p style="text-align: center;align-items: center;font-size: 25px;">☆ EDUCACION</p>
+                            <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
+                                <span style="margin-right: 50px;">☆</span>EDUCACION
+                            </p>
                         </div>
                     </article>
                 </div>
