--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                 <div class="columna2">
                     <article style="width: 100%; height: 33%;" alt="Informacion Adicional">
                         <div class="texto_general">
-                            <p style="text-align: center;align-items: center;font-size: 25px;">☆ INFORMACIÓN ADICIONAL</p>
+                            <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
+                                <span style="margin-right: 50px;">☆</span>INFORMACION ADICIONAL
+                            </p>
                         </div>
                     </article>
                     <article style="width: 100%; height: 33%;" alt="Perfil">
