--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                     </article>
                     <article style="width: 100%; height: 33%;" alt="Perfil">
                         <div class="texto_general">
-                            <p style="text-align: center;align-items: center;font-size: 25px;">☆ PERFIL</p>
+                            <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
+                                <span style="margin-right: 50px;">☆</span>PERFIL
+                            </p>
                         </div>
                     </article>
                     <article style="width: 100%; height: 33.8%;" alt="Habilidades">
