--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                     </article>
                     <article style="width: 100%; height: 33.8%;" alt="Habilidades">
                         <div class="texto_general">
-                            <p style="text-align: center;align-items: center;font-size: 25px;">☆ HABILIDADES</p>
+                            <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
+                                <span style="margin-right: 50px;">☆</span>HABILIDADES
+                            </p>
                         </div>
                     </article>
                 </div>
