--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
                                 <span style="margin-right: 50px;">☆</span>EXPERIENCIA LABORAL
                             </p>
+                            <p>ASISTENTE INFORMATICO</p>
+                            <p>COLEGIO NADAL</p>
+                            <p>nov 2021 - may 2022 | Sant Feliu de Llobregat</p>
+                            <p>Era responosable de hacer mantenimiento técnico y configuración de todos los sistemas informatico, excepto de los servidores.</p>
                         </div>
                     </article>
                     <article style="width: 100%; height: 40%;" alt="Educacion">
