creacion de tabla

--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
                             <p>COLEGIO NADAL</p>
                             <p>nov 2021 - may 2022 | Sant Feliu de Llobregat</p>
                             <p>Era responosable de hacer mantenimiento técnico y configuración de todos los sistemas informatico, excepto de los servidores.</p>
+                            <p>OPERARIO</p>
+                            <p>SCHNEIDER ELECTRIC</p>
+                            <p>may 2023 - ago 2024 | Carrer Llobregat, 11, 08750 Molins de Rei Barcelona</p>
+                            <p>Operario encargado de febricación y ensamblaje de armarios eléctricos</p>
+                            <ul>
+                                <li>Fabricación de piezas para armarios eléctricos, asegurando precisión de los detalles y cumpliendo los estándares de calidad.</li>
+                                <li>Pulido, revisión y control de calidad de las piezas, garantizando que cumplieran con los requisitos técnicos y estéticos.</li>
+                                <li>Ensamblaje final de los armarios eléctrico, siguiendo planos y especificaciones técnicas</li>
+                            </ul>
                         </div>
                     </article>
                     <article style="width: 100%; height: 40%;" alt="Educacion">
@@ -57,6 +66,28 @@
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
                                 <span style="margin-right: 50px;">☆</span>INFORMACION ADICIONAL
                             </p>
+                            <table style="width: 100%; border-collapse: collapse;">
+                                <tr>
+                                  <td style="text-align: left;">GENERO</td>
+                                  <td style="text-align: right;">HOMBRE</td>
+                                </tr>
+                                <tr>
+                                    <td style="text-align: left;">Fecha de nacimiento</td>
+                                    <td style="text-align: right;">8 / 8 / 2003</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;">Lugar de nacimiento</td>
+                                    <td style="text-align: right;">Esplugues de Llobregat</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;">Nacionalidad</td>
+                                    <td style="text-align: right;">Española</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;">Estado civil</td>
+                                    <td style="text-align: right;">Soltero</td>
+                                  </tr>
+                              </table>
                         </div>
                     </article>
                     <article style="width: 100%; height: 33%;" alt="Perfil">
