generado espacio entre las tablas

--- a/index.html
+++ b/index.html
@@ -68,24 +68,24 @@
                             </p>
                             <table style="width: 100%; border-collapse: collapse;">
                                 <tr>
-                                  <td style="text-align: left;">GENERO</td>
-                                  <td style="text-align: right;">HOMBRE</td>
+                                  <td style="text-align: left;padding: 30px 0;">GENERO</td>
+                                  <td style="text-align: right;padding: 30px 0;">HOMBRE</td>
                                 </tr>
                                 <tr>
-                                    <td style="text-align: left;">Fecha de nacimiento</td>
-                                    <td style="text-align: right;">8 / 8 / 2003</td>
+                                    <td style="text-align: left;padding: 30px 0;">Fecha de nacimiento</td>
+                                    <td style="text-align: right;padding: 30px 0;">8 / 8 / 2003</td>
                                   </tr>
                                   <tr>
-                                    <td style="text-align: left;">Lugar de nacimiento</td>
-                                    <td style="text-align: right;">Esplugues de Llobregat</td>
+                                    <td style="text-align: left;padding: 30px 0;">Lugar de nacimiento</td>
+                                    <td style="text-align: right;padding: 30px 0;">Esplugues de Llobregat</td>
                                   </tr>
                                   <tr>
-                                    <td style="text-align: left;">Nacionalidad</td>
-                                    <td style="text-align: right;">Española</td>
+                                    <td style="text-align: left;padding: 30px 0;">Nacionalidad</td>
+                                    <td style="text-align: right;padding: 30px 0;">Española</td>
                                   </tr>
                                   <tr>
-                                    <td style="text-align: left;">Estado civil</td>
-                                    <td style="text-align: right;">Soltero</td>
+                                    <td style="text-align: left;padding: 30px 0;">Estado civil</td>
+                                    <td style="text-align: right;padding: 30px 0;">Soltero</td>
                                   </tr>
                               </table>
                         </div>
