Retocado la experiencaia laboral

--- a/index.html
+++ b/index.html
@@ -37,18 +37,17 @@
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
                                 <span style="margin-right: 50px;">☆</span>EXPERIENCIA LABORAL
                             </p>
-                            <p>ASISTENTE INFORMATICO</p>
-                            <p>COLEGIO NADAL</p>
-                            <p>nov 2021 - may 2022 | Sant Feliu de Llobregat</p>
-                            <p>Era responosable de hacer mantenimiento técnico y configuración de todos los sistemas informatico, excepto de los servidores.</p>
-                            <p>OPERARIO</p>
-                            <p>SCHNEIDER ELECTRIC</p>
-                            <p>may 2023 - ago 2024 | Carrer Llobregat, 11, 08750 Molins de Rei Barcelona</p>
-                            <p>Operario encargado de febricación y ensamblaje de armarios eléctricos</p>
-                            <ul>
-                                <li>Fabricación de piezas para armarios eléctricos, asegurando precisión de los detalles y cumpliendo los estándares de calidad.</li>
-                                <li>Pulido, revisión y control de calidad de las piezas, garantizando que cumplieran con los requisitos técnicos y estéticos.</li>
-                                <li>Ensamblaje final de los armarios eléctrico, siguiendo planos y especificaciones técnicas</li>
+                            <h2 style="margin-bottom: 5px;margin-top: 30px;">Asistente Informático | Colegio Nadal</h2>
+                            <p style="margin: 0; color: gray; font-size: 14px;">Nov 2021 - May 2022 | Sant Feliu de Llobregat</p>
+                            <p style="margin-top: 10px;">Responsable del mantenimiento técnico y configuración de los sistemas informáticos, excepto de los servidores.</p>
+                            
+                            <h2 style="margin-top: 30px; margin-bottom: 5px;">Operario | Schneider Electric</h2>
+                            <p style="margin: 0; color: gray; font-size: 14px;">May 2023 - Ago 2024 | Carrer Llobregat, 11, 08750 Molins de Rei, Barcelona</p>
+                            <p style="margin-top: 10px;">Encargado de la fabricación y ensamblaje de armarios eléctricos, con las siguientes responsabilidades:</p>
+                            <ul style="margin-top: 10px; padding-left: 20px; list-style-type: disc;font-size: 16px;">
+                                <li>Fabricación de piezas para armarios eléctricos, asegurando precisión y cumplimiento de estándares de calidad.</li>
+                                <li>Pulido, revisión y control de calidad de las piezas para garantizar requisitos técnicos y estéticos.</li>
+                                <li>Ensamblaje final de los armarios eléctricos, siguiendo planos y especificaciones técnicas.</li>
                             </ul>
                         </div>
                     </article>
@@ -95,6 +94,7 @@
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
                                 <span style="margin-right: 50px;">☆</span>PERFIL
                             </p>
+                            <p style="line-height: 1.5; font-size:larger; margin-top: 30px;">Soy técnico en Sistemas Microinformáticos y Redes con experiencia práctica en la reparación y mantenimiento de dispositivos, adquirida durante mi formación y prácticas en un instituto. Posteriormente, trabajé durante más de un año como operario en la fabricación, pulido y ensamblaje de armarios eléctricos, desarrollando habilidades técnicas y de trabajo en equipo. Actualmente, estoy cursando el Grado Superior de Desarrollo de Aplicaciones Multiplataforma, con el objetivo de especializarme en el diseño y desarrollo de soluciones tecnológicas innovadoras.</p>
                         </div>
                     </article>
                     <article style="width: 100%; height: 33.8%;" alt="Habilidades">
