--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </article>
                 </div>
                 <div class="columna2">
-                    <article style="width: 100%; height: 33%;" alt="Informacion Adicional">
+                    <article style="width: 100%;" alt="Informacion Adicional">
                         <div class="texto_general">
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
                                 <span style="margin-right: 50px;">☆</span>INFORMACION ADICIONAL
@@ -89,7 +89,7 @@
                               </table>
                         </div>
                     </article>
-                    <article style="width: 100%; height: 33%;" alt="Perfil">
+                    <article style="width: 100%;" alt="Perfil">
                         <div class="texto_general">
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
                                 <span style="margin-right: 50px;">☆</span>PERFIL
