creacion tabla habilidades

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </header>
             <div class="cuerpo">
                 <div class="columna1">
-                    <article style="width: 100%; height: 60%;" alt="Experiencia Laboral">
+                    <article style="width: 100%;" alt="Experiencia Laboral">
                         <div class="texto_general">
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
                                 <span style="margin-right: 50px;">☆</span>EXPERIENCIA LABORAL
@@ -54,8 +54,50 @@
                     <article style="width: 100%; height: 40%;" alt="Educacion">
                         <div class="texto_general">
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
-                                <span style="margin-right: 50px;">☆</span>EDUCACION
+                                <span style="margin-right: 50px;">☆</span>HABILIDADES
                             </p>
+                            <table style="width: 100%; border-collapse: collapse;">
+                                <tr>
+                                  <td style="text-align: left;padding: 15px 0;">MANEJO DE HERRAMIENTAS Y MAQUINARIA:</td>
+                                  <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
+                                </tr>
+                                <tr>
+                                    <td style="text-align: left;padding: 15px 0;">CONTROL DE CALIDAD</td>
+                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">MONTAJE Y ENSAMBLAJE</td>
+                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">ADAPTABILIDAD</td>
+                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">DISEÑO Y PROGRAMACION DE TECNOLOGÍA</td>
+                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">SEGURIDAD LABORAL</td>
+                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">PENSAMIENTO CRÍTICO Y ANALISIS</td>
+                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">TRABAJO EN EQUIPO</td>
+                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">CREATIVIDAD E ORIGINALIDAD</td>
+                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">RESPONSABILIDAD Y COMPROMISO</td>
+                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
+                                  </tr>
+                            </table>
                         </div>
                     </article>
                 </div>
@@ -100,7 +142,7 @@
                     <article style="width: 100%; height: 33.8%;" alt="Habilidades">
                         <div class="texto_general">
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
-                                <span style="margin-right: 50px;">☆</span>HABILIDADES
+                                <span style="margin-right: 50px;">☆</span>EDUCACION
                             </p>
                         </div>
                     </article>
